--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activities.LoginActivity">
+    tools:context="edu.galileo.android.androidchat.activities.LoginActivity">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -18,11 +18,10 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-             android:inputType="textPersonName"
+            android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/editTxtEmail"
-            android:hint="@string/login.message.email"
-            android:layout_alignParentTop="true" />
+            android:hint="@string/login.message.email"/>
 
     </android.support.design.widget.TextInputLayout>
 
@@ -45,10 +44,10 @@
 
     </android.support.design.widget.TextInputLayout>
     <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/layoutButtons"
-        android:orientation="horizontal"
         android:layout_centerInParent="true">
     <Button
         android:layout_width="wrap_content"
@@ -63,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login.button.signup"
-        android:id="@+id/btnSignon"
+        android:id="@+id/btnSignup"
         android:layout_alignTop="@+id/button"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
